# ai-examples

DOC/: to_do_app.postman_collection.json
adk_agent/: .gitignore  pyproject.toml
adk_agent/root_agent/: agent.py
todo_app/: .env  .gitignore  README.md  Read.md  pyproject.toml  todos.db-shm  todos.db-wal
todo_app/DOC/: generate_folder.sh  to_do_app.postman_collection.json
todo_app/app/: agent.py  main.py  main_mcp.py  main_mcp_adk.py
todo_app/app/initdb/: database.py
todo_app/app/models/: todo.py
todo_app/app/schemas/: todo.py
todo_app/app/services/business/: todo_service.py
todo_app/app/services/database/: init.py  todo_repository.py
todo_app/config/: logging.conf  settings.py
