[tool.poetry]
name = "todo-app"
version = "1.0.0"
description = "A simple To-Do App built using FastAPI"
packages = [{ include = "app" }]  # Tells Poetry to include the 'app' directory as your package

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
sqlalchemy = "^2.0.41"
pydantic = "^2.11.5"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"